# BaseNaviWidget

./: CMakeLists.txt  README.md
include/: BaseNaviWidget.h
src/: BaseNaviWidget.cpp
